# CMake_Basic

./: README.md
01_sample_executable/: CMakeLists.txt  README.md
02_3files_executable/: CMakeLists.txt  README.md
03_static_library/: CMakeLists.txt  README.md  main.cpp
04_dir_management/: README.md
04_dir_management/libhello/: CMakeLists.txt
05_dir_management_senior/: README.md
05_dir_management_senior/libhello/: CMakeLists.txt  hello.cpp  hello.h
05_dir_management_senior/src/: CMakeLists.txt
06_dynamic_library/: README.md
06_dynamic_library/libhello/: CMakeLists.txt
07_version_library/: README.md
07_version_library/libhello/: CMakeLists.txt
07_version_library/src/: CMakeLists.txt
08_use_shared_library/: CMakeLists.txt  README.md
08_use_shared_library/src/: CMakeLists.txt
09_runtime_lib_installation/: README.md
09_runtime_lib_installation/bulid/: README.md
09_runtime_lib_installation/libhello/: CMakeLists.txt  hello.cpp
09_runtime_lib_installation/src/: CMakeLists.txt
10_runtime_installation/: CMakeLists.txt  README.md
10_runtime_installation/include/: hello.h
10_runtime_installation/src/: CMakeLists.txt
11_search_dir_source/: CMakeLists.txt  README.md
12_search_dirs_source/: CMakeLists.txt  README.md
12_search_dirs_source/math/: CMakeLists.txt
13_config_management/: CMakeLists.txt  README.md
14_install_test/: CMakeLists.txt  README.md
15_env_check/: CMakeLists.txt
16_version_info/: CMakeLists.txt  main.cpp
17_package/: CMakeLists.txt  README.md  config.h.in
